# blocco

./: .gitignore  CMakeLists.txt  Justfile  PROGRESS.md  README.md  TODO.md
.github/: copilot-instructions.md
.github/prompts/: cppgame.prompt.md
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake  FetchSDL3.cmake  Options.cmake  PreventInSourceBuilds.cmake  VulkanHelpers.cmake
scripts/: build.fish  commit.fish  diagnose.fish  env_probe.fish  git_hook.fish  run.fish  setup.fish  test.fish
shaders/: CMakeLists.txt  frag.glsl  vert.glsl
src/: CMakeLists.txt  camera.cpp  camera.hpp  capture.cpp  capture.hpp  collision.cpp  collision.hpp  config.hpp  engine.cpp  engine.hpp  headless.cpp  input.hpp  labels.cpp  labels.hpp  logging.cpp  logging.hpp  main.cpp  math.cpp  math.hpp  platform.cpp  platform.hpp  renderer.cpp  renderer.hpp  scene.hpp  vk_utils.cpp  vk_utils.hpp
tests/: CMakeLists.txt  test_collision.cpp  test_math.cpp
